--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -12,7 +12,9 @@
           <i class="fas fa-envelope"></i>
         </a>
         <a class="right-item" href="https://nhlocal.github.io/" title="לשאר התוכנות של היוצר">
-          <img width="30" style="border-radius: 48%;" src="{{ site.baseurl }}/assets/images/NH.LOCAL.jpg" alt="הסמל של המחבר">
+          <div class="nhlocal-icon-wrapper">
+            <img class="nhlocal-icon" width="27" src="{{ site.baseurl }}/assets/images/NH.LOCAL.jpg" alt="הסמל של המחבר">
+          </div>
         </a>
       </div>
     </div>
