חלוקת js משופרת

--- a/docs/_layouts/artist.html
+++ b/docs/_layouts/artist.html
@@ -44,4 +44,7 @@ layout: default
   <button id="loadMoreButton">טען עוד</button>
 </div>
 
-<script src="{{ site.baseurl }}/assets/js/search.js"></script>
+<!-- סקריפטים ספציפיים לדף אמן -->
+<!-- search.js נדרש עבור פונקציית downloadSong -->
+<script src="{{ site.baseurl }}/assets/js/search.js" defer></script>
+<script src="{{ site.baseurl }}/assets/js/artist-page.js" defer></script>
