הסרת מס' סידורי מהתצוגה

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -37,7 +37,7 @@
 
     <div class="search-filters">
          <button class="filter-button active" data-filter="all">הכל</button>
-        <button class="filter-button" data-filter="serial">מספר סידורי</button>
+        <!-- <button class="filter-button" data-filter="serial">מספר סידורי</button> -->
         <button class="filter-button" data-filter="name">שם השיר</button>
         <button class="filter-button" data-filter="album">שם האלבום</button>
         <button class="filter-button" data-filter="singer">שם הזמר</button>
