--- a/docs/_layouts/artist.html
+++ b/docs/_layouts/artist.html
@@ -25,26 +25,38 @@ layout: default
         <th>מספר סידורי</th>
         <th>שם השיר</th>
         <th>שם האלבום</th>
-        <th>שם הזמר</th>		  
+        <th>שם הזמר</th>
       </tr>
     </thead>
     <tbody class="songs-list">
       {% for song in page.songs %}
-      <tr > <!-- Removed onclick attribute -->
-        <td><a>{{ song.number }}</a></td>
+      <tr data-song-serial="{{ song.number }}"> <!-- Added data attribute for easier JS selection -->
+        <td>
+            <a href="#" class="serial-link" title="העתק קישור לשיר זה">{{ song.number }}</a>
+        </td>
         <td>{{ song.name }}</td>
-        <td>{{ song.album }}</td>
-        <td>{{ song.artist }}</td>
+        <td>
+            <button class="album-button" title="חפש אלבום: {{ song.album }}">
+                {{ song.album }}
+            </button>
+        </td>
+        <td>
+             <button class="singer-button" title="חפש זמר: {{ song.artist }}">
+                 {{ song.artist }}
+             </button>
+        </td>
       </tr>
       {% endfor %}
     </tbody>
   </table>
-  
+
   <!-- Add this button in your HTML where you want it to appear -->
-  <button id="loadMoreButton">טען עוד</button>
+  <!-- Note: Load More button logic might need separate implementation if artist pages are very long -->
+  <!-- <button id="loadMoreButton">טען עוד</button> -->
 </div>
 
 <!-- סקריפטים ספציפיים לדף אמן -->
-<!-- search.js נדרש עבור פונקציית downloadSong -->
+<!-- core.js should be loaded by default layout -->
+<!-- search.js needed ONLY if using downloadSong function -->
 <script src="{{ site.baseurl }}/assets/js/search.js" defer></script>
 <script src="{{ site.baseurl }}/assets/js/artist-page.js" defer></script>
