--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -26,7 +26,7 @@
   </script>
   {% seo %}
 
-  <!-- הגדרת משתנה baseurl עבור JavaScript -->
+  <!-- הגדרת משתנה baseurl עבור JavaScript (מוקדם ככל האפשר) -->
   <script>
     var baseurl = "{{ site.baseurl }}";
   </script>  
@@ -58,14 +58,14 @@
   </div>
   {% include footer.html %}
   
-  <!-- הגדרת משתנה baseurl עבור JavaScript (חייב להופיע לפני שאר הסקריפטים) -->
-  <script>
-    var baseurl = "{{ site.baseurl }}";
-  </script>
-
   <!-- סקריפטים מרכזיים וגלובליים -->
+  <!-- baseurl כבר הוגדר למעלה -->
   <script src="{{ site.baseurl }}/assets/js/core.js" defer></script>
   <script src="{{ site.baseurl }}/assets/js/ads.js" defer></script> <!-- טוען גם פרסומות וגם לוגיקת Modal עזרה -->
+  <!-- <<< הוספת הקובץ המשותף >>> -->
+  <script src="{{ site.baseurl }}/assets/js/shared-redirect-handler.js" defer></script>
+
+  <!-- קבצים ספציפיים לדף ייטענו על ידי הדפים עצמם או layoutים ספציפיים שלהם, למשל _layouts/artist.html -->
 
 </body>
 </html>
